2018-08-07  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* GNUmakefile.in (DLL_VER): rename as PTW32_VER.
	* Makefile (DLL_VER): Likewise.
	* Bmakefile (DLL_VER): Likewise; does anyone use this anymore?
	* pthread.h: Move internal library stuff from pthread.h to _pthw32.h
	* _ptw32.h: As above.
	* ANNOUNCE: Update.
	* NEWS: Update.
	* Makefile: Static libraries renamed to libpthreadV*

2018-07-22  Mark Pizzolato <markpizzolato dash pthreads dash win32 at subscriptions dot pizzolato dot net>

	* _ptw32.h: Restore support for compiling as static (with /MT or /MTd);
	define int64_t and uint64_t as typedefs rather than #defines.
	* dll.c: Likewise.
	* implement.h: Likewise.
	* need_errno.h: Likewise.
	* pthread_detach.c: Likewise.

2018-07-22  Carlo Bramini <carlo underscore bramini at users dot sourceforge dot net>

	* context.h (ARM): Additional macros checked for ARM processors.

2018-07-22  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (all-tests-md): New; run the /MD build and tests from
	all-tests-cflags.
	* Makefile (all-tests-mt): New; run the /MT build and tests from
	all-tests-cflags.
	* Makefile (all-tests-cflags): retain; require all-tests-md and
	all-tests-mt.
	
2016-12-25  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Change all license notices to the Apache License 2.0
	* LICENCE: New Apache License file
	* NOTICE: New file.
	* COPYING: Removed.
	* COPYING.GPL: Removed.

2016-12-20  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* implement.h (PThreadStateReuse): this thread state enum value
	must be less than PThreadStateRunning to reflect an invalid thread
	handle.
	* pthread_kill.c: changed conditions for return of ESRCH.
	* ptw32_destroy.c: copy HANDLEs rather than whole thread struct;
	edit comment.
	* pthread_self.c: set implicit thread handle state to PThreadStateRunning.
	* pthread_create.c: set thread state to PThreadStateSuspended