@@ -7,8 +7,11 @@ RESOURCE_OBJS	= \
 DLL_OBJS	= \
 		pthread.$(OBJEXT)
 
-# Separate modules for minimising the size of statically linked images
 STATIC_OBJS	= \
+		pthread.$(OEXT)
+
+# Separate modules for minimising the size of statically linked images
+STATIC_OBJS_SMALL	= \
 		cleanup.$(OBJEXT) \
 		create.$(OBJEXT) \
 		dll.$(OBJEXT) \
